--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.drawer-side a.active {
+    color: red !important;
+  }
+.drawer-side a {
+    background-color: transparent !important;
+    color: white;
+  }
+.drawer-side a:hover {
+    color: white !important;
+  }
